[package]
name         = "icm40627"
version      = "0.1.0"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2024"
description  = "An embedded-hal driver for the ICM-40627 6-axis IMU"
repository   = "https://github.com/Beewitchy/icm42670"
license      = "MIT OR Apache-2.0"
keywords     = ["accelerometer", "gyro", "imu"]
categories   = ["aerospace", "embedded", "hardware-support", "no-std"]

[dependencies]
accelerometer = "0.12"
embedded-hal  = "1"
defmt = { version = "1", optional = true }

[features]
defmt = ["dep:defmt"]
